To email a contributor remove "DELETE" from the email address.
(The DELETEs are necessary as this list is published online.)

2014/10/09 Jeffrey Fulmer <http://www.joedog.org/support/>
 * src/array.c            Fixed a memory leak; added free(this) in array_destroy
 * src/array.h            Added prototype for array_to_string(ARRAY this);

2014/09/05 Jeffrey Fulmer <http://www.joedog.org/support/>
 * SIEGE RELEASE          RELEASE_3-0-8_SEP_05-2014
 * src/http.c             Added :port to the host header on condition
 * src/log.c              Added logfile location to error messages
 * src/version.c          Version increment: 3.0.8

2014/08/20 Jeffrey Fulmer <http://www.joedog.org/support/>
 * SIEGE RELEASE          RELEASE_3-0-7_AUG_20-2014
 * src/url.c              Handle localhost from a Location header
 * src/version.c          Version increment: 3.0.7

2014/07/18 Jeffrey Fulmer <http://www.joedog.org/support/>
 * src/ssl.c              SSL_initialise return TRUE if C->ssl not null

2014/01/08 Jeffrey Fulmer <http://www.joedog.org/support/>
 * SIEGE RELEASE          RELEASE_3-0-6_JAN_08-2014
 * doc/siegerc.in         Updated to include proxy directives

2013/10/31 Jeffrey Fulmer <http://www.joedog.org/support/>
 * SIEGE RELEASE          RELEASE_3-0-6-beta2_OCT-31-2013
 * src/client.c           Added support for HTTP-303
 * src/version.c          Version increment: 3.0.6-beta2

2013/10/27 Jeffrey Fulmer <http://www.joedog.org/support/>
 * SIEGE RELEASE          RELEASE_3-0-6-beta1_OCT-27-2013
 * src/main.c             Added new logic for --reps=once
 * src/client.c           Moved __normalize to url.c; Change logic for -r once
 * src/url.c              Added url_normalize(URL U, location); 
 * src/version.c          Version increment: 3.0.6-beta1

2013/10/17 Jeffrey Fulmer <http://www.joedog.org/support/>
 * SIEGE RELEASE          RELEASE_3-0-5_OCT-17-2013
 * src/version.c          Version increment: 3.0.5
